--- a/style.css
+++ b/style.css
@@ -5,7 +5,12 @@
 
 * {
     padding: unset;
+    padding-block: unset;
+    padding-inline: unset;
     margin: unset;
+    margin-block: unset;
+    margin-inline: unset;
+    min-inline-size: unset;
     background: unset;
     border: unset;
     font-size: 1rem;
@@ -20,15 +25,14 @@ html {
     background-size: calc(3 * var(--unit));
 }
 
+h1 {
+    height: 100%;
+}
+
 h1 a {
     font-size: calc(1.5 * var(--unit));
-    position: fixed !important;
-    top: 0;
-    left: 0;
     text-decoration: none;
-    z-index: 1;
-    padding: calc(0.5 * var(--unit)) var(--unit);
-    transition-delay: unset !important;
+    height: 100%;
 }
 
 h1 span {
@@ -40,8 +44,6 @@ h1 span {
     color: transparent;
     margin: 0 calc(0.1 * var(--unit)) 0 calc(0.2 * var(--unit));
     position: relative;
-    top: calc(-0.3 * var(--unit));
-    transition-delay: unset;
 }
 
 h1:hover span {
@@ -49,17 +51,23 @@ h1:hover span {
     background-image: url("data:image/svg+xml,<svg width='256' height='256' xmlns='http://www.w3.org/2000/svg'><g stroke='%2300f' stroke-width='30'><path d='m0 0 256 256'/><path d='M256 0 0 256'/><path fill='none' d='M15 15h226v226H15z'/></g></svg>");
 }
 
-h1 a, button {
+h1 a, button, label {
     background: #00f;
+    display: inline-flex;
+    align-items: center;
     color: #ff0;
     font-weight: bold;
     border: none;
     cursor: pointer;
     padding: calc(0.5 * var(--unit));
-    transition-delay: 0.1s;
 }
 
-h1:hover a, button:hover {
+input:checked + label {
+    background: #fff;
+    color: #00f;
+}
+
+h1:hover a, button:hover, label:hover {
     background: white;
     color: #00f;
     cursor: pointer;
@@ -70,15 +78,41 @@ h1:active a, button:active {
     color: #00f;
 }
 
-fieldset#displayRadioFieldSet {
-    background: black;
-    position: absolute;
-    left: 5rem;
-    top: 5rem;
+header {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    position: fixed !important;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 
-fieldset#displayRadioFieldSet * {
-    background: black;
+@media (orientation: landscape) {
+    header {
+        height: calc(2 * var(--unit));
+    }
+}
+
+input[type="radio"] {
+    border: 0 !important;
+    clip: rect(1px, 1px, 1px, 1px);
+    height: 1px !important;
+    overflow: hidden;
+    padding: 0 !important;
+    position: absolute !important;
+    width: 1px !important;
+}
+
+#displayRadioFieldSet {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+}
+
+header label {
+    height: 100%;
 }
 
 button:after {
